K8/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: api-gateway

spec:
  replicas: 1

  selector:
    matchLabels:
      app: api-gateway

  template:
    metadata:
      labels:
        app: api-gateway

    spec:
      containers:
        - name: api-gateway
          image: zomoto.azurecr.io/api-gateway:33
          ports:
            - containerPort: 5000

---
apiVersion: v1
kind: Service

metadata:
  name: api-gateway-service

spec:

  selector:
    app: api-gateway

  ports:
    - port: 5000
      targetPort: 5000
