K8/auth-service.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: auth-service

spec:
  replicas: 1

  selector:
    matchLabels:
      app: auth-service

  template:
    metadata:
      labels:
        app: auth-service

    spec:
      containers:
        - name: auth-service
          image: zomoto.azurecr.io/auth-service:33
          ports:
            - containerPort: 5003

---
apiVersion: v1
kind: Service

metadata:
  name: auth-service

spec:
  type: ClusterIP

  selector:
    app: auth-service

  ports:
    - port: 5003
      targetPort: 5003
