K8/frontend.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend
          image: zomoto.azurecr.io/frontend:34
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service

metadata:
  name: frontend-service

spec:

  selector:
    app: frontend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
