K8/order-service.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: order-service

spec:
  replicas: 1

  selector:
    matchLabels:
      app: order-service

  template:
    metadata:
      labels:
        app: order-service

    spec:
      containers:
        - name: order-service
          image: zomoto.azurecr.io/order-service:24
          ports:
            - containerPort: 5001

---
apiVersion: v1
kind: Service

metadata:
  name: order-service

spec:
  type: ClusterIP

  selector:
    app: order-service

  ports:
    - port: 5001
      targetPort: 5001
