K8/payment-service.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: payment-service

spec:
  replicas: 1

  selector:
    matchLabels:
      app: payment-service

  template:
    metadata:
      labels:
        app: payment-service

    spec:
      containers:
        - name: payment-service
          image: zomoto.azurecr.io/payment-service:33
          ports:
            - containerPort: 5002

---
apiVersion: v1
kind: Service

metadata:
  name: payment-service

spec:
  type: ClusterIP

  selector:
    app: payment-service

  ports:
    - port: 5002
      targetPort: 5002
