K8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80

      - path: /login
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 5003

      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 5001

      - path: /payments
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              number: 5002
